Add comments template

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -26,6 +26,7 @@ $space-half: $space / 2;
 @import 'modules/menu.scss';
 @import 'modules/header.scss';
 @import 'modules/widgets.scss';
+@import 'modules/comments.scss';
 
 
 
