--- a/sass/modules/widgets.scss
+++ b/sass/modules/widgets.scss
@@ -6,7 +6,7 @@ $space-half: $space / 2 !default;
 
     & > ul {
         list-style-type: none;
-        padding-left: $space-half;
+        padding-left: 0;
     }
 
 }
