--- a/sass/modules/widgets.scss
+++ b/sass/modules/widgets.scss
@@ -6,7 +6,8 @@ $space-half: $space / 2 !default;
 
     & > ul {
         list-style-type: none;
-        padding-left: 0;
+        padding: 0;
+        margin-top: 0;
     }
 
 }
