--- a/sass/modules/menu.scss
+++ b/sass/modules/menu.scss
@@ -43,33 +43,11 @@
 }
 
 
-/* Nav toggle */
-
-.nav-toggle-button { // flat
-    background-color: $col-main;
-    border: 2px solid $col-main;
-    color: $white;
-    font-weight: 900;
+.nav-toggle { // flat
     display: none;
-    line-height: 2em;
-    vertical-align: middle;
-    text-transform: uppercase;
-    outline: 0;
-    padding: 0 1em;
-    cursor: pointer;
     position: absolute;
     top: $space-half;
-    right: $space-half; 
-    
-    &:hover {
-        border-color: $white;
-    }
-
-    &:active {
-        background-color: $white;
-        border-color: $white;
-        color: $col-main;
-    }
+    right: $space-half;
 }
 
 @include breakpoint(max-narrow) {
@@ -83,7 +61,7 @@
         visibility: visible;
     }
 
-    .nav-toggle-button {
+    .nav-toggle {
         display: block;
     }
 }
