--- a/sass/style.scss
+++ b/sass/style.scss
@@ -22,6 +22,7 @@ $space-half: $space / 2;
 $space-quarter: $space / 4;
 
 /* Colors */
+// TODO - evalute https://codepen.io/hugobaeta/pen/grJjVp
 $col-main: #61210F; // main is used for links and such. Should be pretty dark, as it is used vs white quite often
 
 $blackish: #222; // A bit softer black to make the feel of the site not as hard
