--- a/sass/modules/comments.scss
+++ b/sass/modules/comments.scss
@@ -1,17 +1,51 @@
-$space: 1.5rem !default;
-
 ol.comment-list {
 
     padding-left: 0;
 
     &, ol.children {
         list-style-type: none;
+    }
 
+    ol.children {
+        margin-top: $space;
+        padding-left: $space;
     }
 }
 
-.comment-body {
-    padding-bottom: $space;
+.comment {
+    margin-bottom: $space;
 }
 
+.comment-body {
+    
+    border: 1px solid $col-main;
 
+    .comment-meta {
+        border-bottom: 1px solid $col-main;
+        padding: $space;
+    }
+        
+
+    .comment-content {
+
+        padding: 0 $space;
+
+        p {
+            margin-top: 1em;
+            margin-bottom: 1em;
+        }
+
+    }
+
+    .reply {
+        padding: 0 0 $space $space;
+    }
+
+    .comment-reply-link {
+        @include button();
+    }
+}
+
+.comment-list .bypostauthor .comment-meta {
+    background-color: $col-main-light;
+}
