--- a/sass/style.scss
+++ b/sass/style.scss
@@ -8,62 +8,22 @@ Version: 2.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: tiny
-Tags: TODO one-column, two-columns, right-sidebar, flexible-header, accessibility-ready, custom-colors, custom-header, custom-menu, custom-logo, editor-style, featured-images, footer-widgets, post-formats, rtl-language-support, sticky-post, theme-options, threaded-comments, translation-ready
+Tags: one-column, two-columns, right-sidebar, custom-colors, custom-header, custom-menu, custom-logo, editor-style, featured-images, footer-widgets, post-formats, sticky-post, theme-options, threaded-comments, translation-ready
 This theme, like WordPress, is licensed under the GPL.
 Use it to make something cool, have fun, and share what you've learned with others.
 */
 
-
 /* Variables */
-// Space should only be used for spacing in the structure. For content margins and padding, use ems.
-$space: 1.5rem;
-$space-double: $space * 2;
-$space-half: $space / 2;
-$space-quarter: $space / 4;
-
-/* Colors */
-// TODO - evalute https://codepen.io/hugobaeta/pen/grJjVp
-$col-main: #61210F; // main is used for links and such. Should be pretty dark, as it is used vs white quite often
-
-$blackish: #222; // A bit softer black to make the feel of the site not as hard
-$white: #FFF;
-
-/**
- * Breakpoints
- * Only use two breakpoints to keep it simple
- * Ref: http://screensiz.es/
- */
-$narrow: 800px; // Smaller screens and phones fall below this
-$wide: 1200px; // Regular desktops and beyond - 1280 px is normal
-
-@mixin breakpoint($point) {
-    @if $point == max-narrow {
-        @media screen and ( max-width: $narrow ) { @content; }
-    }
-    @else if $point == min-narrow {
-        @media screen and ( min-width: $narrow ) { @content; }
-    }
-    @else if $point == between {
-        @media screen and ( min-width: $narrow ) and ( max-width: $wide ) { @content; }
-    }
-    @else if $point == max-wide {
-        @media screen and ( max-width: $wide ) { @content; }
-    }
-    @else if $point == min-wide {
-        @media screen and ( min-width: $wide ) { @content; }
-    }
-    @else {
-        @media screen { @content; }
-    }
- }
- 
+@import 'variables';
+@import 'mixins';
 
 /* Vendor stuff */
 @import 'vendor/normalize.scss';
-@import 'vendor/accessibility.scss';
+@import 'vendor/accessibility.scss'; 
+@import 'vendor/galleries.scss';
+
 @import 'modules/alignment.scss';
 @import 'modules/menu.scss';
-@import 'modules/widgets.scss';
 @import 'modules/comments.scss';
 
 
@@ -81,10 +41,7 @@ body {
     background-color: #ffffff; // same as registered in  add_theme_support( 'custom-background' )
 }
 
-.content-container {
-    width: 100%;
-    max-width: 760px;    
-}
+
 
 // clearfix - https://css-tricks.com/snippets/css/clear-fix/
 .group:after {
@@ -95,7 +52,7 @@ body {
 
 .silo {
     float: left;
-    padding: $space-half;
+    padding: $space;
     position: relative;
 
     @include breakpoint(max-narrow) {
@@ -103,7 +60,24 @@ body {
     }
 }
 
+@include breakpoint(min-narrow){
+
+    .sidebar-container, .site-header {
+        max-width: ( $wide - $content-width ) / 2;
+    }
+    
+    .content-container {
+        max-width: $content-width;    
+    }
+
+}
+
+
 /* Header */
+.site-header {
+    // TODO
+}
+
 #site-logo {
     display: block;
 }
@@ -113,10 +87,65 @@ body {
     margin: 0;
 }
 
+.archive-header p {
+    margin-top: 0;
+}
+
+/* Widgets */
+.widget-area {
+
+    & > ul {
+        list-style-type: none;
+        padding: 0;
+        margin-top: 0;
+    }
+
+}
+
+/* Footer */
+
+@include breakpoint(min-narrow){
+    .footerarea-container {
+        width: 33.3333%;
+    }
+}
+
 /* Content structure */
 
-article.hentry {
-    margin-bottom: $space;
+main article + article {
+    margin-top: $gutenmargin * 2;
+
+    &:before {
+        display: block;
+        content: "";
+        border-top: 1px solid $blackish;
+        position: relative;
+        top: - $gutenmargin;
+        margin: 0 30%;
+    }
+
+}
+
+.sticky {
+    border: 1px solid $col-main;
+    padding: $space;
+    position: relative;
+
+    header {
+        h1,h2 {
+            margin-top: 0;
+        }
+    }
+
+    .sticker {
+        display: block;
+        position: absolute;
+        top: 0;
+        right: 0;
+        background-color: $col-main;
+        color: $white;
+        padding: 0.3em 0.5em;
+    }
 }
 
 /* Pagination */
@@ -133,7 +162,80 @@ article.hentry {
     }
 }
 
+/* Post meta */
+.post-meta {
+    border: 1px solid $col-main;
+    background-color: $col-main-light;
+    padding: $space-half;
+}
+
+.post-categories:before {
+    content: "\0029C9";
+}
+
+.post-tags:before {
+    content: "#";
+}
+
+.post-categories, .post-tags {
+    
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    display: inline;
+
+    &:before {
+        display: inline-block;
+        width: 1em;    
+    }
+
+    li + li:before {
+        content: ", "
+    }
+
+    li {
+
+        display: inline;
+
+        a,
+        a:visited {
+            color: $col-main;
+            font-size: 0.8em;
+            font-weight: 700;
+            text-decoration: none;
+            text-transform: uppercase;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+
+        a:active {
+            color: $blackish;
+        }
+
+    }
+}
+
 /* Content */
+.site-title {
+    margin-top: $space;
+}
+
+.post-title {
+    margin-top: 0;
+}
+
+.author-info {
+    font-size: 0.8em;
+    text-transform: uppercase;
+    font-weight: 700;
+}
+
+.post-thumbnail {
+    margin-top: -$gutenmargin + $space;
+    margin-bottom: $gutenmargin;
+}
+
 img, figure {
     height: auto;
     max-width: 100%;
@@ -141,29 +243,27 @@ img, figure {
     margin: 0;
 }
 
-.button, button {
-    background-color: $col-main;
-    border: 2px solid $col-main;
-    color: $white;
-    font-weight: 900;
-    line-height: 2em;
-    vertical-align: middle;
-    text-transform: uppercase;
-    outline: 0;
-    padding: 0 1em;
-    cursor: pointer;
-    
-    &:hover {
-        border-color: $white;
-    }
-    
-    &:active {
-        background-color: $white;
-        border-color: $white;
-        color: $col-main;
-    }
+.button,
+button,
+input[type="submit"],
+.wp-block-button .wp-block-button__link {
+    @include button();
 }
 
+input,
+textarea {
+    display: block;
+    margin-bottom: 1em;
+}
+input[type="email"],
+input[type="password"],
+input[type="search"],
+input[type="tel"],
+input[type="text"],
+input[type="url"],
+textarea {
+    width: 100%;
+}
 /* Image caption */
 .wp-caption {
     text-align: center;
@@ -177,13 +277,40 @@ pre {
     overflow-x: auto;
 }
 
+
+
 /* Typography*/ 
 
 * {
-    font-family: sans-serif;
+    font-family: $font-body;
     word-wrap: break-word;
 }
 
+
+// Ensure gutenmargins
+article {
+
+    [class^="wp-block"],
+    h1,h2,h3,h4,h5,h6,
+    p {
+        margin-bottom: $gutenmargin;
+        margin-top: $gutenmargin;
+    }
+
+    p {
+        line-height: 1.8;
+    }
+
+    dd,
+    li {
+        margin-bottom: 6px;
+    }
+
+}
+
+
+// Gutenberg font sizes for headings
+// https://github.com/WordPress/gutenberg/blob/master/packages/block-library/src/heading/editor.scss
 h1,
 h2,
 h3,
@@ -191,8 +318,69 @@ h4,
 h5,
 h6 {
     clear: both;
-    margin-bottom: 1em;
-    margin-top: 1em;
+    line-height: 1.8;
+    font-family: $font-headings;
+}
+
+h1 {
+    font-size: 2.44em;
+}
+
+h2 {
+    font-size: 1.95em;
+}
+
+h3 {
+    font-size: 1.56em;
+}
+
+h4 {
+    font-size: 1.25em;
+}
+
+h5 {
+    font-size: 1em;
+}
+
+h6 {
+    font-size: 0.8em;
+}
+
+h1,
+h2,
+h3 {
+    line-height: 1.4;
+}
+
+h4 {
+    line-height: 1.5;
+}
+
+// anchor - links
+a {
+    color: $col-main;
+}
+
+a:active {
+    color: $blackish;
+}
+
+a:visited {
+    color: $col-main;
+}
+
+h1,h2,h3,h4,h5,h6 {
+    a {
+        text-decoration: none;
+    }
+
+    a, a:visited {
+        color: $blackish;
+    }
+
+    a:hover {
+        color: $col-main;
+    }
 }
 
 table {
